fix: сверстать хедер и карточку

--- a/index.html
+++ b/index.html
@@ -10,31 +10,174 @@
             <header class="header">
                 <div class="header__content">
                     <div class="header__logo"></div>
-                        <div class="header__links"></div>
+                        <div class="header__links">
                             <a href="/" class="header__link">Main</a>
                             <a href="/" class="header__link">Gallery</a>
                             <a href="/" class="header__link">News</a>
                             <a href="/" class="header__link">Profile</a>
                         </div>
+                        <a href="tel:+544349000000" class="header__tel">+544 3490 00000
+                            <span class="header__tel-span">Звони скорее!</span>
+                        </a>
                 </div>
+                <h1 class="header__title">Найдено 349 котов</h1>
             </header>
         
             <main class="content">
-                <section class="profile">
-                </section>
-
-                <section class="photo">
-                    <ul>
-                        <li class="photo__card">
-                            <img class="photo__card-place" src="#" alt="#">
-                            <button class="photo__delete-icon"  type="button" aria-label="Удалить фото"></button>
-                            <div class="photo__flex">
-                                <h2 class="photo__card-discprition"></h2>
-                                <div class="photo__like-container">
-                                    <button class="photo__card-like" type="button" aria-label="Поставить лайк"></button>
-                                    <p class="photo__like-counter"></p>
+                <section class="cards">
+                    <div class="cards__sort">
+                        <p class="cards__onsort">Сортировать по:</p>
+                        <ul class="cards__price">
+                            <p class="cards__price-sort">Цене</p>
+                            <li>
+                                <a href=" " class="cards__price-low" >По уменьшению цены</a>
+                            </li>
+                            <li>
+                                <a href=" " class="cards__price-low">По увеличению цены</a>
+                            </li>
+                            </ul>
+                        <ul class="cards__price">
+                            <p class="cards__price-sort">Возрасту</p>
+                                <li>
+                                    <a href=" " class="cards__price-low" >По уменьшению возраста</a>
+                                </li>
+                                <li>
+                                    <a href=" " class="cards__price-low">По увеличению возраста</a>
+                                </li>
+                        </ul>
+                    </div>    
+                    <ul class="cards__list">
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
                                 </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
                             </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
                         </li>
                     </ul>
                 </section>
