fix: сверстать блок с карточками

--- a/index.html
+++ b/index.html
@@ -50,7 +50,95 @@
                         <li class="cards__card">
                             <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
                             <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale cards__sale_activ">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">30 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_2.png" alt="Фото кота">
+                            <button class="cards__like cards__like_sold"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">40 000 руб.</p>
+                            </div>
+                                <button class="cards__but cards__but_sold">Продан</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_3.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">20 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_2.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale">-40&#37;</p>
+                            <div class="cards__block">
+                                <h2 class="cards__name">Кот полосатый</h2>
+                                <div class="cards__parameters">
+                                    <div class="cards__border"></div>
+                                    <p class="cards__color">Коричневый окрас</p>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">2 мес.</p>
+                                        <p class="cards__age-des">Возраст</p>
+                                    </div>
+                                    <div class="cards__age">
+                                        <p class="cards__age-num">4</p>
+                                        <p class="cards__age-des">Кол-во лап</p>
+                                    </div>
+                                </div>
+                                <p class="cards__price-cat">25 000 руб.</p>
+                            </div>
+                                <button class="cards__but">Купить</button>
+                        </li>
+                        <li class="cards__card">
+                            <img class="cards__img" src="/images/cat_3.png" alt="Фото кота">
+                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <p class="cards__sale cards__sale_activ">-40&#37;</p>
                             <div class="cards__block">
                                 <h2 class="cards__name">Кот полосатый</h2>
                                 <div class="cards__parameters">
@@ -71,7 +159,7 @@
                         </li>
                         <li class="cards__card">
                             <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
-                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
+                            <button class="cards__like cards__like_sold"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale">-40&#37;</p>
                             <div class="cards__block">
                                 <h2 class="cards__name">Кот полосатый</h2>
@@ -87,99 +175,12 @@
                                         <p class="cards__age-des">Кол-во лап</p>
                                     </div>
                                 </div>
-                                <p class="cards__price-cat">30 000 руб.</p>
+                                <p class="cards__price-cat">10 000 руб.</p>
                             </div>
-                                <button class="cards__but">Купить</button>
-                        </li>
-                        <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
-                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
-                            <p class="cards__sale">-40&#37;</p>
-                            <div class="cards__block">
-                                <h2 class="cards__name">Кот полосатый</h2>
-                                <div class="cards__parameters">
-                                    <div class="cards__border"></div>
-                                    <p class="cards__color">Коричневый окрас</p>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">2 мес.</p>
-                                        <p class="cards__age-des">Возраст</p>
-                                    </div>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">4</p>
-                                        <p class="cards__age-des">Кол-во лап</p>
-                                    </div>
-                                </div>
-                                <p class="cards__price-cat">30 000 руб.</p>
-                            </div>
-                                <button class="cards__but">Купить</button>
-                        </li>
-                        <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
-                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
-                            <p class="cards__sale">-40&#37;</p>
-                            <div class="cards__block">
-                                <h2 class="cards__name">Кот полосатый</h2>
-                                <div class="cards__parameters">
-                                    <div class="cards__border"></div>
-                                    <p class="cards__color">Коричневый окрас</p>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">2 мес.</p>
-                                        <p class="cards__age-des">Возраст</p>
-                                    </div>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">4</p>
-                                        <p class="cards__age-des">Кол-во лап</p>
-                                    </div>
-                                </div>
-                                <p class="cards__price-cat">30 000 руб.</p>
-                            </div>
-                                <button class="cards__but">Купить</button>
-                        </li>
-                        <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
-                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
-                            <p class="cards__sale">-40&#37;</p>
-                            <div class="cards__block">
-                                <h2 class="cards__name">Кот полосатый</h2>
-                                <div class="cards__parameters">
-                                    <div class="cards__border"></div>
-                                    <p class="cards__color">Коричневый окрас</p>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">2 мес.</p>
-                                        <p class="cards__age-des">Возраст</p>
-                                    </div>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">4</p>
-                                        <p class="cards__age-des">Кол-во лап</p>
-                                    </div>
-                                </div>
-                                <p class="cards__price-cat">30 000 руб.</p>
-                            </div>
-                                <button class="cards__but">Купить</button>
-                        </li>
-                        <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
-                            <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
-                            <p class="cards__sale">-40&#37;</p>
-                            <div class="cards__block">
-                                <h2 class="cards__name">Кот полосатый</h2>
-                                <div class="cards__parameters">
-                                    <div class="cards__border"></div>
-                                    <p class="cards__color">Коричневый окрас</p>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">2 мес.</p>
-                                        <p class="cards__age-des">Возраст</p>
-                                    </div>
-                                    <div class="cards__age">
-                                        <p class="cards__age-num">4</p>
-                                        <p class="cards__age-des">Кол-во лап</p>
-                                    </div>
-                                </div>
-                                <p class="cards__price-cat">30 000 руб.</p>
-                            </div>
-                                <button class="cards__but">Купить</button>
+                                <button class="cards__but cards__but_sold">Продан</button>
                         </li>
                     </ul>
+                    <button class="cards__add">Показать ещё 20</button>
                 </section>
             </main>
 
