fix: сверстать адаптив под планшет

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <header class="header">
                 <div class="header__content">
                     <a href="/">
-                        <img class="header__logo" src="images/logo.png">
+                        <img class="header__logo" src="images/logo.png" alt="Логотип">
                     </a>
                         <div class="header__links">
                             <a href="/" class="header__link">Main</a>
