fix: сверстать все разрешения

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <a href="tel:+544349000000" class="header__tel">+544 3490 00000
                             <span class="header__tel-span">Звони скорее!</span>
                         </a>
+                        <div class="header__menu"></div>
                 </div>
                 <h1 class="header__title">Найдено 349 котов</h1>
             </header>
