fix: поменять ссылки на изображения

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <header class="header">
                 <div class="header__content">
                     <a href="/">
-                        <img class="header__logo" src="images/logo.png" alt="Логотип">
+                        <img class="header__logo" src="./images/logo.png" alt="Логотип">
                     </a>
                         <div class="header__links">
                             <a href="/" class="header__link">Main</a>
@@ -51,7 +51,7 @@
                     </div>    
                     <ul class="cards__list">
                         <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <img class="cards__img" src="./images/cat_1.png" alt="Фото кота">
                             <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale cards__sale_activ">-40&#37;</p>
                             <div class="cards__block">
@@ -73,7 +73,7 @@
                                 <button class="cards__but">Купить</button>
                         </li>
                         <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_2.png" alt="Фото кота">
+                            <img class="cards__img" src="./images/cat_2.png" alt="Фото кота">
                             <button class="cards__like cards__like_sold"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale">-40&#37;</p>
                             <div class="cards__block">
@@ -95,7 +95,7 @@
                                 <button class="cards__but cards__but_sold">Продан</button>
                         </li>
                         <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_3.png" alt="Фото кота">
+                            <img class="cards__img" src="./images/cat_3.png" alt="Фото кота">
                             <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale">-40&#37;</p>
                             <div class="cards__block">
@@ -117,7 +117,7 @@
                                 <button class="cards__but">Купить</button>
                         </li>
                         <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_2.png" alt="Фото кота">
+                            <img class="cards__img" src="./images/cat_2.png" alt="Фото кота">
                             <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale">-40&#37;</p>
                             <div class="cards__block">
@@ -139,7 +139,7 @@
                                 <button class="cards__but">Купить</button>
                         </li>
                         <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_3.png" alt="Фото кота">
+                            <img class="cards__img" src="./images/cat_3.png" alt="Фото кота">
                             <button class="cards__like"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale cards__sale_activ">-40&#37;</p>
                             <div class="cards__block">
@@ -161,7 +161,7 @@
                                 <button class="cards__but">Купить</button>
                         </li>
                         <li class="cards__card">
-                            <img class="cards__img" src="/images/cat_1.png" alt="Фото кота">
+                            <img class="cards__img" src="./images/cat_1.png" alt="Фото кота">
                             <button class="cards__like cards__like_sold"  type="button" aria-label="Поставить лайк"></button>
                             <p class="cards__sale">-40&#37;</p>
                             <div class="cards__block">
